Fix z-index in voting screen

--- a/src/containers/VotingPage/components/VotingConfirmation/index.scss
+++ b/src/containers/VotingPage/components/VotingConfirmation/index.scss
@@ -1,5 +1,5 @@
 .voting-confirmation {
-    z-index: 99999999999999;
+    z-index: 99999;
     
     & .ant-drawer-body {
         padding-left: 40px;
